--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/line-clamp": "^0.3.1",
+    "@tailwindcss/typography": "^0.5.1",
     "next": "^12.0.9",
     "react": "17.0.2",
-    "react-cam": "^1.1.11",
     "react-dom": "17.0.2",
-    "react-html5-camera-photo": "^1.5.5",
-    "swiper": "^7.4.1"
+    "react-spring": "^9.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
