--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.1",
     "next": "^12.0.9",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-spring": "^9.4.2"
+    "react-spring": "^9.4.2",
+    "swr": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
