--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.1",
+    "@use-gesture/react": "^10.2.6",
     "next": "^12.0.9",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
