--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "^0.5.1",
     "@use-gesture/react": "^10.2.6",
     "@vercel/fetch": "^6.1.1",
+    "axios": "^0.26.1",
     "chart.js": "^3.7.1",
     "embla-carousel-react": "^6.2.0",
     "next": "^12.0.9",
